# cubecl

crates/cubecl/: Cargo.toml
crates/cubecl-core/src/: lib.rs
crates/cubecl-mlir/: Cargo.toml  README.md
crates/cubecl-mlir/src/: lib.rs  runtime.rs  server.rs  storage.rs
crates/cubecl-mlir/src/compiler/: mod.rs  module.rs
crates/cubecl-mlir/src/compiler/mlir/: compile.rs  mod.rs
crates/cubecl-wgpu/src/: runtime.rs
crates/cubecl-wgpu/src/compute/: server.rs
crates/cubecl/src/: lib.rs
examples/gelu/: Cargo.toml
examples/gelu/examples/: gelu.rs
