[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "MLIR runtime for the CubeCL"
edition.workspace = true
keywords = ["cpu", "jit", "mlir", "llvm", "runtime"]
license.workspace = true
name = "cubecl-mlir"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-mlir"
version.workspace = true

[features]
default = [
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
]
std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]


[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.5.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.5.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.5.0", default-features = false, features = [
    "channel-mutex",
] }

derive-new = { workspace = true }
derive_more = { workspace = true, features = [
    "not",
    "add",
    "mul",
    "add_assign",
    "mul_assign",
    "display",
] }

log = { workspace = true }
melior = { version = "0.22.0", features = ["ods-dialects", "helpers"] }
rustc-hash = "2.1.1"

[dev-dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.5.0", features = [
    "export_tests",
] }
cubecl-linalg = { path = "../cubecl-linalg", version = "0.5.0", features = [
    "export_tests",
] }
cubecl-reduce = { path = "../cubecl-reduce", version = "0.5.0", features = [
    "export_tests",
] }
half = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }

